@@ -1,0 +1,6 @@
+{% extends "admin/change_list.html" %}
+{% load i18n admin_static admin_list %}
+{% load admin_urls %}
+
+{% block object-tools-items %}
+{% endblock %}
